# renpy-build

./: build.py  prepare.sh  requirements.txt
nightly/: git.sh  python.sh
patches/: libffi_wsl.diff
patches/Python-3.11.8/: 0001-Skip-semaphore-test.patch  0002-bpo-31046-ensurepip-does-not-honour-the-value-of-pre.patch  0003-00328-Restore-pyc-to-TIMESTAMP-invalidation-mode-as-.patch  0004-Improve-reproduceability-patch-from-OpenSUSE.patch
renpybuild/: context.py  model.py  run.py
runtime/: librenpython2.c
runtime/aurora/: CMakeLists.txt
runtime/aurora/include/: AuroraIntegration.h  AuroraOSAudio.hpp  ComposerAdapter.hpp  DBus.hpp  DisplayBlankerController.hpp  InputAdapter.hpp  PythonModule.h  Utilities.hpp
runtime/aurora/src/: AuroraIntegration.cpp  AuroraOSAudio.cpp  ComposerAdapter.cpp  DBus.cpp  DisplayBlankerController.cpp  InputAdapter.cpp  PythonModule.cpp  Utilities.cpp
tasks/: __init__.py  ffmpeg.py  freetype.py  fribidi.py  hostpython2.py  libauroraintegration.py  libffi.py  libjpeg_turbo.py  libpng.py  librenpy.py  pythonlib.py  renpython.py  sdl2.py  zlibng.py  zsync.py
